--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,12 @@ dependencies {
     // Single target that includes all FirebaseUI libraries above
     compile 'com.firebaseui:firebase-ui:2.0.1'
 
+    compile('com.mikepenz:materialdrawer:5.9.4@aar') {
+        transitive = true
+    }
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
 
 
     testCompile 'junit:junit:4.12'
