--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ allprojects {
         maven {
             url "https://maven.google.com"
         }
+        maven { url 'https://dl.bintray.com/drummer-aidan/maven' }
+        maven { url "https://jitpack.io" }
     }
 }
 
